# R2D2Project

./: Behaviors.md  README.md  infrared.py  ultrasonic.py
LEDs/: ArduinoControlLeds.ino  RpiControl.py  arduino_subscriber.py  main_subscriber.py
MotorSpeedControl/: MotorSpeedControl.ino
my_id_robot/: package.xml  package.xml~  setup.cfg  setup.py  setup.py~
my_id_robot/launch/: my_id_robot_launch.xml  my_id_robot_launch.xml~  my_robot.launch.py  my_robot.launch.py~  my_robot_launch.py~
my_id_robot/my_id_robot/: 2301.dic  2301.lm  2301.log_pronounce  2301.sent  2301.vocab  arduino_subscriber.py  ir_publisher.py  main_subscriber.py  main_subscriber.py~  old_main_subscriber.py  opencv.py~  opencv_subscriber.py  opencv_subscriber.py~  servo_subscriber.py  servo_subscriber.py~  ultrasonic_publisher.py  voice_publisher.py  voice_publisher.py~
my_id_robot/my_id_robot/ArduinoControl/: ArduinoControl.ino  arduino.md
